--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
-    "truffle-contract": "^2.0.0",
-    "web3": "0.20.1"
+    "truffle-contract": "^2.0.5",
+    "web3": "^0.20.1"
   },
   "devDependencies": {
-    "ethereumjs-testrpc": "^2.2.4",
-    "mocha": "^3.2.0",
-    "truffle": "3.4.5"
+    "ethereumjs-testrpc": "^2.2.7",
+    "mocha": "^3.5.0",
+    "truffle": "^3.4.5"
   }
 }
