--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
+    "jquery": "^3.2.1",
     "truffle-contract": "^2.0.5",
     "web3": "^0.20.1"
   },
   "devDependencies": {
     "bip39": "2.3.0",
+    "create-html": "^3.1.0",
     "ethereumjs-testrpc": "^2.2.7",
+    "file-loader": "^0.11.2",
     "mocha": "^3.5.0",
-    "truffle": "^3.4.5"
+    "truffle": "^3.4.5",
+    "webpack": "^3.5.5"
   }
 }
